<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SqliteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="query">query</string>
    <string name="queryTheCursor">queryTheCursor</string>
    <string name="proivide_before_click_add">点击之前先点击add按钮</string>
    
    <string name="person_query">personQuery</string>

</resources>
